updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I have a Bachelor's degree in Psychology from San Diego State University.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>El Centro, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like country swing dancing and going to concerts.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is a remote developer position.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Tempe, AZ</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want a career change due to not being able to advance in my current career.</p>
     </section>
 
     <footer id="footer">
